// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCard renders standard card 1`] = `
<div
  className="container-block jKtYiX"
>
  <div
    className="bGOGzN"
  >
    <img
      alt="image"
      className="kgtmKB"
      src="http://localhost/img.png"
      title="image"
    />
    <div
      className="hCurYm"
    />
  </div>
</div>
`;

exports[`ImageCard renders type = half 1`] = `
<div
  className="junjQF"
>
  <div
    className="container-block dxousv"
  >
    <img
      alt=""
      className="kgtmKB"
      src="http://localhost/img.png"
      title=""
    />
  </div>
  <div
    className="cBvxBn"
  >
    <span
      className="gMznuQ"
    >
      <div
        className="text text--dark text--primary image-card__title--half kWGHae"
        disabled={false}
        size="hecto"
      >
        <span
          className="gMznuQ"
        >
          Title
        </span>
      </div>
    </span>
    <span
      className="dQVquz"
    >
      <div
        className="text text--dark text--primary image-card__subtitle--half kWGHae"
        disabled={false}
        size="hecto"
      >
        <span
          className="dQVquz"
        >
          Sub Title
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`ImageCard renders with additional content when \`cardTitle\` and \`cardSubtitle\` prop values are not provided (old API support) 1`] = `
<div
  className="container-block jKtYiX"
>
  <div
    className="bGOGzN"
  >
    <img
      alt=""
      className="kgtmKB"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="hCurYm"
    >
      <div
        className="gYqMCZ"
      >
        <span
          className="gMznuQ"
        >
          Title
        </span>
        <span
          className="dQVquz"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom image 1`] = `
<div
  className="container-block jKtYiX"
>
  <div
    className="bGOGzN"
  >
    <svg />
    <div
      className="hCurYm"
    >
      <div
        className="gYqMCZ"
      >
        <span
          className="gMznuQ"
        >
          Title
        </span>
        <span
          className="dQVquz"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;

exports[`ImageCard renders with custom props 1`] = `
<div
  className="container-block jKtYiX"
>
  <div
    className="bGOGzN"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <img
      alt=""
      className="kgtmKB"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="hCurYm"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="gYqMCZ"
        style={
          Object {
            "display": "none",
          }
        }
      >
        <span
          className="gMznuQ"
        >
          Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle 1`] = `
<div
  className="container-block jKtYiX"
>
  <div
    className="bGOGzN"
  >
    <img
      alt=""
      className="kgtmKB"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="hCurYm"
    >
      <div
        className="gYqMCZ"
      >
        <span
          className="gMznuQ"
        >
          Title
        </span>
        <span
          className="dQVquz"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImageCard renders with title & subtitle, extra content 1`] = `
<div
  className="container-block jKtYiX"
>
  <div
    className="bGOGzN"
  >
    <img
      alt=""
      className="kgtmKB"
      src="http://localhost/img.png"
      title=""
    />
    <div
      className="hCurYm"
    >
      <div
        className="gYqMCZ"
      >
        <span
          className="gMznuQ"
        >
          Title
        </span>
        <span
          className="dQVquz"
        >
          Sub Title
        </span>
      </div>
    </div>
  </div>
  <div>
    Extra content
  </div>
</div>
`;
